--- a/force-app/main/default/classes/PSETriggerHandler.cls
+++ b/force-app/main/default/classes/PSETriggerHandler.cls
@@ -4,101 +4,129 @@
 
 public class PSETriggerHandler {
     
-    public static void setDefaultFieldsBeforeUpsert(){
-        if(Trigger.isBefore && (Trigger.isInsert || Trigger.isUpdate)){
-            Set<Id> ssIds = new Set<Id>();
-            Set<Id> participantIds = new Set<Id>();
-            for (Participant_Study_Enrollment__c pse : (List<Participant_Study_Enrollment__c>)Trigger.new){
-                ssIds.add(pse.Study_Site__c);
-                participantIds.add(pse.Participant__c);
-            }
-            Map<Id, Study_Site__c> studySitesMap = new Map<Id, Study_Site__c>([
-                    SELECT Id, Principal_Investigator__c FROM Study_Site__c WHERE Id IN: ssIds
-            ]);
-            Map<Id, Participant__c> participantsMap = new Map<Id, Participant__c>([
-                    SELECT Id, Contact__c FROM Participant__c WHERE Id IN: participantIds
-            ]);
-            for (Participant_Study_Enrollment__c pse : (List<Participant_Study_Enrollment__c>)Trigger.new){
-                pse.PI_Contact__c = null;
-                pse.Participant_Contact__c = null;
-                if(pse.Study_Site__c != null) pse.PI_Contact__c = studySitesMap.get(pse.Study_Site__c).Principal_Investigator__c;
-                if(pse.Participant__c != null) pse.Participant_Contact__c = participantsMap.get(pse.Participant__c).Contact__c;
-            }
+    // Handlers: -------------------------------------------------------------------------------------------------------
+    
+    public class SetDefaultFieldsBeforeUpsertHandler extends TriggerHandler{
+        
+        public override void beforeInsert(List<SObject> newList) {
+            setDefaultFieldsBeforeUpsert(newList);
+        }
+        
+        public override void beforeUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+            setDefaultFieldsBeforeUpsert(newList);
         }
     }
     
-    public static void processStatusHistory(){
-        if(Trigger.isAfter && (Trigger.isInsert || Trigger.isUpdate)){
-            List<PSE_Status_History__c> pseStatusHistories = new List<PSE_Status_History__c>();
-            Map<Id, Participant_Study_Enrollment__c> oldMap;
-            Map<Id, Participant_Study_Enrollment__c> newMap = (Map<Id, Participant_Study_Enrollment__c>)Trigger.newMap;
-            if(Trigger.isUpdate) oldMap = (Map<Id, Participant_Study_Enrollment__c>)Trigger.oldMap;
-            for(Participant_Study_Enrollment__c pse : newMap.values()){
-                if(Trigger.isInsert || (Trigger.isUpdate && pse.Status__c != oldMap.get(pse.Id).Status__c)){
-                    if(pse.Status__c == PSEService.PSE_STATUS_ENROLLED){
-                        pseStatusHistories.add(new PSE_Status_History__c(
-                                PSE__c = pse.Id,
-                                Status__c = pse.Status__c,
-                                Changed_Date__c = Datetime.now()
-                        ));
-                    }
-                }
-            }
-            if(pseStatusHistories.size() > 0) insert pseStatusHistories;
+    public class ProcessStatusHistoryHandler extends TriggerHandler{
+        
+        public override void afterInsert(List<SObject> newList) {
+            processStatusHistory(newList, null);
+        }
+        
+        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+            processStatusHistory(newList, (Map<Id, Participant_Study_Enrollment__c>)oldMap);
         }
     }
     
-    public static void createCompleteBaselineSurveyTask(){
-        if(Trigger.isAfter && Trigger.isInsert){
-            List<Task> tasks = new List<Task>();
-            List<Participant_Study_Enrollment__c> pseList = (List<Participant_Study_Enrollment__c>) Trigger.new;
-            List<Id> participantIds = new List<Id>();
-            for(Participant_Study_Enrollment__c pse : pseList) participantIds.add(pse.Participant__c);
-            List<Participant__c> participants = [SELECT Id, Contact__c FROM Participant__c WHERE Id IN: participantIds];
-            List<Id> contactIds = new List<Id>();
-            for(Participant__c participant : participants) contactIds.add(participant.Contact__c);
-            List<User> users = [SELECT Id, ContactId FROM User WHERE ContactId IN: contactIds];
-            for(User taskOwner : users){
-                tasks.add(TaskService.createCompleteBaselineSurveyTask(taskOwner.Id, taskOwner.ContactId));
-            }
-            insert tasks;
+    public class CreateCompleteBaselineSurveyTaskHandler extends TriggerHandler{
+        
+        public override void afterInsert(List<SObject> newList) {
+            createCompleteBaselineSurveyTask(newList);
+        }
+    
+    }
+    
+    public class DeactivateDeceasedUsersHandler extends TriggerHandler{
+        
+        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+            deactivateDeceasedUsers(newList, (Map<Id, Participant_Study_Enrollment__c>)oldMap);
+        }
+    
+    }
+    
+    
+    // Logic: ----------------------------------------------------------------------------------------------------------
+    
+    @TestVisible
+    private static void setDefaultFieldsBeforeUpsert(List<Participant_Study_Enrollment__c> newList){
+        Set<Id> ssIds = new Set<Id>();
+        Set<Id> participantIds = new Set<Id>();
+        for (Participant_Study_Enrollment__c pse : newList){
+            ssIds.add(pse.Study_Site__c);
+            participantIds.add(pse.Participant__c);
+        }
+        Map<Id, Study_Site__c> studySitesMap = new Map<Id, Study_Site__c>([
+                SELECT Id, Principal_Investigator__c FROM Study_Site__c WHERE Id IN: ssIds
+        ]);
+        Map<Id, Participant__c> participantsMap = new Map<Id, Participant__c>([
+                SELECT Id, Contact__c FROM Participant__c WHERE Id IN: participantIds
+        ]);
+        for (Participant_Study_Enrollment__c pse :newList){
+            pse.PI_Contact__c = null;
+            pse.Participant_Contact__c = null;
+            if(pse.Study_Site__c != null) pse.PI_Contact__c = studySitesMap.get(pse.Study_Site__c).Principal_Investigator__c;
+            if(pse.Participant__c != null) pse.Participant_Contact__c = participantsMap.get(pse.Participant__c).Contact__c;
         }
     }
-
-    public static void deactivateDeceasedUsers() {
-        if(Trigger.isAfter && Trigger.isUpdate) {
-            List<Id> contactIds = new List<Id>();
-
-            List<Participant_Study_Enrollment__c> pseList = [
-                    SELECT Id,
-                           Participant__r.Contact__c,
-                           Status__c
-                    FROM Participant_Study_Enrollment__c
-                    WHERE Id IN: Trigger.new
-            ];
-            for(Participant_Study_Enrollment__c pse : pseList) {
-                if(pse.Status__c.equals(PSEService.PSE_STATUS_DECEASED)) {
-                    contactIds.add(pse.Participant__r.Contact__c);
+    
+    @TestVisible
+    private static void processStatusHistory(List<Participant_Study_Enrollment__c> newList, Map<Id, Participant_Study_Enrollment__c> oldMap){
+        List<PSE_Status_History__c> pseStatusHistories = new List<PSE_Status_History__c>();
+        for(Participant_Study_Enrollment__c pse : newList){
+            if(oldMap == null || (oldMap != null && pse.Status__c != oldMap.get(pse.Id).Status__c)){
+                if(pse.Status__c == PSEService.PSE_STATUS_ENROLLED){
+                    pseStatusHistories.add(new PSE_Status_History__c(
+                            PSE__c = pse.Id,
+                            Status__c = pse.Status__c,
+                            Changed_Date__c = Datetime.now()
+                    ));
                 }
             }
+        }
+        if(pseStatusHistories.size() > 0) insert pseStatusHistories;
+    }
+    
+    @TestVisible
+    private static void createCompleteBaselineSurveyTask(List<Participant_Study_Enrollment__c> newList){
+        List<Task> tasks = new List<Task>();
+        List<Id> participantIds = new List<Id>();
+        for(Participant_Study_Enrollment__c pse : newList) participantIds.add(pse.Participant__c);
+        List<Participant__c> participants = [SELECT Id, Contact__c FROM Participant__c WHERE Id IN: participantIds];
+        List<Id> contactIds = new List<Id>();
+        for(Participant__c participant : participants) contactIds.add(participant.Contact__c);
+        List<User> users = [SELECT Id, ContactId FROM User WHERE ContactId IN: contactIds];
+        for(User taskOwner : users){
+            tasks.add(TaskService.createCompleteBaselineSurveyTask(taskOwner.Id, taskOwner.ContactId));
+        }
+        insert tasks;
+    }
 
-            if(!contactIds.isEmpty()) {
-                updateUsers(contactIds);
+    @TestVisible
+    public static void deactivateDeceasedUsers(List<Participant_Study_Enrollment__c> newList, Map<Id, Participant_Study_Enrollment__c> oldMap) {
+        List<Id> contactIds = new List<Id>();
+        List<Participant_Study_Enrollment__c> pseList = [
+                SELECT Id,
+                        Participant__r.Contact__c,
+                        Status__c
+                FROM Participant_Study_Enrollment__c
+                WHERE Id IN: newList
+        ];
+        for(Participant_Study_Enrollment__c pse : pseList) {
+            if(pse.Status__c == PSEService.PSE_STATUS_DECEASED && pse.Status__c != oldMap.get(pse.Id).Status__c) {
+                contactIds.add(pse.Participant__r.Contact__c);
             }
         }
+        if(!contactIds.isEmpty()) deactivateUsers(contactIds);
     }
 
     @Future
-    private static void updateUsers(List<Id> contactIds) {
+    private static void deactivateUsers(List<Id> contactIds) {
         List<User> users = [
                 SELECT Id, IsActive, ContactId
                 FROM User
                 WHERE ContactId IN :contactIds
         ];
-        for(User u : users) {
-            u.IsActive = false;
-        }
-
+        for(User u : users) u.IsActive = false;
         update users;
     }
 }
