--- a/force-app/main/default/classes/TasksRemote.cls
+++ b/force-app/main/default/classes/TasksRemote.cls
@@ -70,9 +70,9 @@ public class TasksRemote {
     
     private static void createOriginatorsList(List<OpenTask> tasks) {
         Id participantId;
-        Set<Id> delegateIds = new Set<Id>(PatientDelegateService.getDelegatedParticipantUserIds());
+        Set<Id> delegateIds = new Set<Id>(PatientDelegateService.getInstance().getDelegatedUsersIds());
         if(ParticipantService.getParticipantState().isDelegate){
-            participantId = PatientDelegateService.getDelegatePatientUserId();
+            participantId = PatientDelegateService.getInstance().getParticipantUserId();
         } else {
             participantId = UserInfo.getUserId();
         }
