--- a/force-app/main/default/classes/ContactTriggerHandler.cls
+++ b/force-app/main/default/classes/ContactTriggerHandler.cls
@@ -1,56 +1,75 @@
 /**
  * Created by D.Yasinskyi on 05.05.2018
+ * Refactored by Leonid Bartenev
  */
+
 public without sharing class ContactTriggerHandler {
     
-    public static void updateParticipantAndUserEmailsOnContactEmailChange(){
-        if(Trigger.isAfter && Trigger.isUpdate){
-            //prepare participants map:
-            List<Participant__c> participants = [SELECT Id, Contact__c FROM Participant__c WHERE Contact__c IN: Trigger.newMap.keySet()];
-            Map<Id, Participant__c> participantsByContactMap = new Map<Id, Participant__c>();
-            for(Participant__c participant : participants) participantsByContactMap.put(participant.Contact__c, participant);
-            //prepare users map:
-            List<User> users = [SELECT Id, ContactId FROM User WHERE ContactId IN: Trigger.newMap.keySet()];
-            Map<Id, User> usersByContactMap = new Map<Id, User>();
-            for(User user : users) usersByContactMap.put(user.ContactId, user);
-            //process contacts:
-            List<Contact> contacts = (List<Contact>)Trigger.new;
-            List<Participant__c> participantsForUpdate = new List<Participant__c>();
-            List<User> usersForUpdate = new List<User>();
-            for(Contact cnt : contacts){
-                Contact oldCnt = (Contact)Trigger.oldMap.get(cnt.Id);
-                if(oldCnt.Email != cnt.Email){
-                    Participant__c participant = participantsByContactMap.get(cnt.Id);
-                    if(participant != null){
-                        participant.Email__c = cnt.Email;
-                        participantsForUpdate.add(participant);
-                    }
-                    User user = usersByContactMap.get(cnt.Id);
-                    if(user != null){
-                        user.Email = cnt.Email;
-                        usersForUpdate.add(user);
-                    }
-                }
-            }
-            update usersForUpdate;
-            update participantsForUpdate;
+    // Handlers: -------------------------------------------------------------------------------------------------------
+    
+    public class UpdateParticipantAndUserEmailsOnEmailChangeHandler extends TriggerHandler{
+        
+        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+            updateParticipantAndUserEmailsOnEmailChange(newList, (Map<Id, Contact>)oldMap);
         }
     }
     
-    //===================================PUBLIC=========================================================================
-    public static void onAfterinsert(List<Contact> contacts) {
-        //create new Users for Delegates (if not exist)
-        createUserForDelegateContact(contacts);
+    public class CreateUserForDelegateContactHandler extends TriggerHandler{
+        
+        public override void afterInsert(List<SObject> newList) {
+            createUserForDelegateContact(newList);
+        }
+        
+        public override void afterUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+            createUserForDelegateContact(newList);
+        }
     }
-    public static void onAfterUpdate(Map<Id, Contact> newContacts, Map<Id, Contact> oldContacts) {
-        //create new Users for Delegates (if not exist)
-        createUserForDelegateContact(newContacts.values());
+    
+    public class SetShowTourDefaultHandler extends TriggerHandler{
+        
+        public override void beforeInsert(List<SObject> newList) {
+            setShowTourDefault(newList);
+        }
     }
-    //===================================PRIVATE========================================================================
-    private static void createUserForDelegateContact(List<Contact> contacts) {
-
+    
+    // Logic: ----------------------------------------------------------------------------------------------------------
+    
+    @TestVisible
+    private static void updateParticipantAndUserEmailsOnEmailChange(List<Contact> newList, Map<Id, Contact> oldMap){
+        //prepare participants map:
+        List<Participant__c> participants = [SELECT Id, Contact__c FROM Participant__c WHERE Contact__c IN: newList];
+        Map<Id, Participant__c> participantsByContactMap = new Map<Id, Participant__c>();
+        for(Participant__c participant : participants) participantsByContactMap.put(participant.Contact__c, participant);
+        //prepare users map:
+        List<User> users = [SELECT Id, ContactId FROM User WHERE ContactId IN: newList];
+        Map<Id, User> usersByContactMap = new Map<Id, User>();
+        for(User user : users) usersByContactMap.put(user.ContactId, user);
+        //process contacts:
+        List<Participant__c> participantsForUpdate = new List<Participant__c>();
+        List<User> usersForUpdate = new List<User>();
+        for(Contact cnt : newList){
+            Contact oldCnt = oldMap.get(cnt.Id);
+            if(oldCnt.Email != cnt.Email){
+                Participant__c participant = participantsByContactMap.get(cnt.Id);
+                if(participant != null){
+                    participant.Email__c = cnt.Email;
+                    participantsForUpdate.add(participant);
+                }
+                User user = usersByContactMap.get(cnt.Id);
+                if(user != null){
+                    user.Email = cnt.Email;
+                    usersForUpdate.add(user);
+                }
+            }
+        }
+        update usersForUpdate;
+        update participantsForUpdate;
+    }
+    
+    @TestVisible
+    private static void createUserForDelegateContact(List<Contact> newList) {
         Map<Id, Contact> filteredContactsByIds = new Map<Id, Contact>();
-        for (Contact cont : contacts) {
+        for (Contact cont : newList) {
             if (cont.primaryContact__c != null && cont.Email != null) {
                 filteredContactsByIds.put(cont.Id, cont);
             }
@@ -60,7 +79,6 @@ public without sharing class ContactTriggerHandler {
         //get users if exist
         Map<Id, User> communityUsers = new Map<Id, User>();
         for (User usr : CommunityService.getCommunityUsersByContactIds(filteredContactsByIds.keySet())) {
-
             if (communityUsers.containsKey(usr.ContactId)) {
                 System.debug('Several users for contact Id= ' + usr.Id);
             } else {
@@ -70,14 +88,18 @@ public without sharing class ContactTriggerHandler {
 
         Set<Id> toCreateUser = new Set<Id>();
         for (Id contactId : filteredContactsByIds.keySet()) {
-
-            if (!communityUsers.containsKey(contactId)) {
-                toCreateUser.add(contactId);
-            }
+            if (!communityUsers.containsKey(contactId)) toCreateUser.add(contactId);
         }
-
-        if (!toCreateUser.isEmpty()) {
-            CommunityService.createPortalUsers(toCreateUser);
-        }
+        if (!toCreateUser.isEmpty()) CommunityService.createPortalUsers(toCreateUser);
+    }
+    
+    @TestVisible
+    private static void setShowTourDefault(List<Contact> newList){
+        List<String> defaultModes = new List<String>{
+                CommunityService.USER_MODE_PI,
+                CommunityService.USER_MODE_HCP,
+                CommunityService.USER_MODE_PARTICIPANT
+        };
+        for(Contact contact : newList) contact.userCommunity_ShowTour__c =String.join(defaultModes, ';');
     }
 }
