--- a/force-app/main/default/classes/PatientDelegateService.cls
+++ b/force-app/main/default/classes/PatientDelegateService.cls
@@ -4,14 +4,24 @@
 
 public class PatientDelegateService {
     
-    public class PatientDelegateServiceException extends Exception {
+    public class PatientDelegateServiceException extends Exception {}
+    
+    public List<Contact> delegates = new List<Contact>();
+    public Boolean isDelegate;
+    public Participant__c participant;
+    
+    private static PatientDelegateService instance;
+    
+    public static PatientDelegateService getInstance(){
+        if(instance == null) instance = new PatientDelegateService();
+        return instance;
     }
     
-    public static List<Contact> delegates = new List<Contact>();
-    public static Boolean isDelegate;
-    public static Participant__c participant;
+    public static void setMock(StubProvider stubProvider){
+        instance = (PatientDelegateService) Test.createStub(PatientDelegateService.class, stubProvider);
+    }
     
-    static {
+    public PatientDelegateService(){
         List<Patient_Delegate__c> participantsPDList = [
                 SELECT
                         Id,
@@ -40,16 +50,28 @@ public class PatientDelegateService {
             if(participants.size() > 0) participant = participants[0];
         }
         if(participant != null){
-            List<Patient_Delegate__c> delegatesPDList = getPatientDelegates(participant.Contact__c);
+            List<Patient_Delegate__c> delegatesPDList = getPDelegates(participant.Contact__c);
             for (Patient_Delegate__c pd : delegatesPDList) delegates.add(pd.Contact__r);
         }
     }
     
-    public static Id getDelegatePatientUserId() {
+    public List<Contact> getDelegates(){
+        return delegates;
+    }
+    
+    public Participant__c getParticipant(){
+        return participant;
+    }
+    
+    public Boolean isDelegate(){
+        return isDelegate;
+    }
+    
+    public Id getParticipantUserId(){
         List<User> user = [
                 SELECT Id
                 FROM User
-                WHERE ContactId = :participant.Contact__c
+                WHERE ContactId =: participant.Contact__c
                 LIMIT 1
         ];
         if (user.isEmpty()) {
@@ -59,40 +81,11 @@ public class PatientDelegateService {
         return user[0].Id;
     }
     
-    public static List<Contact> getDelegateContacts() {
-        return delegates;
+    public List<Patient_Delegate__c> getPDelegates(){
+        return getPDelegates(CommunityService.getUserContact().Id);
     }
     
-    public static List<Contact> getDelegateContacts(Id participantContactId) {
-        List<Contact> contacts = new List<Contact>();
-        for (Patient_Delegate__c pd : getPatientDelegates(participantContactId)) contacts.add(pd.Contact__r);
-        return contacts;
-    }
-    
-    public static List<Id> getDelegatedContactIds() {
-        return SObjectHelper.toIdsList(delegates);
-    }
-    
-    public static List<Id> getDelegatedContactIds(Id participantContactId) {
-        return SObjectHelper.toIdsList(getDelegateContacts(participantContactId));
-    }
-    
-    public static List<Id> getDelegatedParticipantUserIds() {
-        List<Id> userIds = new List<Id>();
-        List<User> users = [
-                SELECT Id
-                FROM User
-                WHERE ContactId IN:delegates
-        ];
-        for (User user : users) userIds.add(user.Id);
-        return userIds;
-    }
-    
-    public static List<Patient_Delegate__c> getPatientDelegates() {
-        return getPatientDelegates(CommunityService.getUserContact().Id);
-    }
-    
-    public static List<Patient_Delegate__c> getPatientDelegates(Id participantContactId) {
+    public List<Patient_Delegate__c> getPDelegates(Id participantContactId){
         return [
                 SELECT
                         Id,
@@ -113,7 +106,31 @@ public class PatientDelegateService {
         ];
     }
     
-    public static void createPatientDelegate(Contact newDelegate) {
+    public List<Id> getDelegatedUsersIds() {
+        Map<Id, User> usersMap = new Map<Id, User>([
+                SELECT Id
+                FROM User
+                WHERE ContactId IN: delegates
+        ]);
+        return new List<Id>(usersMap.keySet());
+    }
+    
+    public List<Contact> getDelegateContacts(Id participantContactId) {
+        List<Contact> contacts = new List<Contact>();
+        for (Patient_Delegate__c pd : getPDelegates(participantContactId)) contacts.add(pd.Contact__r);
+        return contacts;
+    }
+    
+    public List<Id> getDelegatedContactIds() {
+        return SObjectHelper.toIdsList(delegates);
+    }
+    
+    public List<Id> getDelegatedContactIds(Id participantContactId) {
+        return SObjectHelper.toIdsList(getDelegateContacts(participantContactId));
+    }
+    
+    
+    public void createPatientDelegate(Contact newDelegate) {
         if (getDelegatedContactIds().contains(newDelegate.Id)) {
             throw new PatientDelegateServiceException(Label.PG_PST_L_Delegates_WrongAdd);
         }
@@ -133,7 +150,7 @@ public class PatientDelegateService {
         insert delegate;
     }
     
-    public static void resetDelegate(Contact delegate) {
+    public void resetDelegate(Contact delegate) {
         delegate.userCommunityMode__c = null;
         delegate.userCommunytyType__c = null;
         delegate.UserCommunityIsDelegate__c = false;
@@ -144,7 +161,7 @@ public class PatientDelegateService {
                 FROM Patient_Delegate__c
                 WHERE Contact__c = :delegate.Id
         ];
-        delete patientDelegate.get(0);
+        delete patientDelegate.get(0); 
     }
     
 }
